# WebCrawler

./: README.md  pyproject.toml  ruff.toml  scrapy.cfg  uv.toml
.cursor/rules/: global.mdc
docs/: DEVELOPMENT_GUIDE.md
src/webcrawler/: main.py
src/webcrawler/bots/: __init__.py  wcat_pdf_spider.py
src/webcrawler/core/: items.py  pipelines.py  settings.py  utils.py
